--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -4,8 +4,16 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
-# column: value
-#
-two: {}
-# column: value
+one:
+    id: 1
+    email: email@email.com
+    encrypted_password: <%= User.new.send(:password_digest, 'Passw0rd') %>
+    first_name:  <%= Faker::Name.first_name %>
+    last_name: <%= Faker::Name.last_name %>
+#    email: Faker::Internet.email
+two:
+    id: 2
+    email: <%= Faker::Internet.email %>
+    encrypted_password: <%= User.new.send(:password_digest, 'Passw0rd') %>
+    first_name: <%=Faker::Name.first_name  %>
+    last_name: <%= Faker::Name.last_name %>
