add red cross to calendar

--- a/.gitignore
+++ b/.gitignore
@@ -42,7 +42,7 @@ public/uploads/tmp/
 .idea/dataSources/e44c21f2-c444-4568-915a-3b93a71617c2/_src_/
 .idea/dataSources/e44c21f2-c444-4568-915a-3b93a71617c2/_staging_/
 .idea/dataSources/fdbd4d28-c914-4cb9-87f5-38766079ffeb/_staging_/
-app/images/
+app/assets/images/
 app/views/simple_calendar/
 config/environments/
 db/migrate/20170927063746_remove_works_from_time_sheets.rb
