--- a/test/fixtures/time_sheets.yml
+++ b/test/fixtures/time_sheets.yml
@@ -2,10 +2,10 @@
 
 one:
   id: 1
-  time_period: <%=Time.now %>
+  time_period: <%=2.weeks.ago%>
   user_id: 1
 
 two:
   id: 2
-  time_period: <%=Time.now %>
+  time_period: <%=Date.today %>
   user_id: 1
