moved invoice search to new invoice page

--- a/test/fixtures/works.yml
+++ b/test/fixtures/works.yml
@@ -20,3 +20,9 @@ three:
   description:
   project_id: 2
   time_sheet_id: 2
+four:
+  id: 4
+  hour: 1
+  description:
+  project_id: 2
+  time_sheet_id: 1
