--- a/test/fixtures/projects.yml
+++ b/test/fixtures/projects.yml
@@ -2,13 +2,13 @@
 
 one:
   id: 1
-  name: MyString
+  name: Project one
   hours: 1.5
   customer_id: 1
 
 
 two:
   id: 2
-  name: MyString
+  name: Project Two
   hours: 1.5
   customer_id: 1
