add user permissions

--- a/config/database.yml
+++ b/config/database.yml
@@ -33,3 +33,11 @@ development:
   password: monster
   host: localhost
 
+production:
+  adapter: postgresql
+  encoding: unicode
+  database: loggintracker
+  pool: 5
+  username: postgres
+  password: monster
+  host: localhost
