add user permissions

--- a/.gitignore
+++ b/.gitignore
@@ -111,3 +111,4 @@ test/controllers/projects/
 test/controllers/registrations_controller_test.rb
 test/fixtures/roles.yml
 test/models/role_test.rb
+/config/
