--- a/test/fixtures/time_sheets.yml
+++ b/test/fixtures/time_sheets.yml
@@ -1,11 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  id: 1
   time_period: <%=2.weeks.ago%>
-  user_id: 1
+  user: one
 
 two:
-  id: 2
   time_period: <%=Date.today %>
-  user_id: 1
+  user: one
