--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -5,16 +5,31 @@
 # below each fixture, per the syntax in the comments below
 #
 one:
-    id: 1
+
     email: email@email.com
     encrypted_password: <%= User.new.send(:password_digest, 'Passw0rd') %>
     first_name:  <%= Faker::Name.first_name %>
     last_name: <%= Faker::Name.last_name %>
+    street_no: 1
+    street: <%= Faker::Address.street_name %>
+    city: <%= Faker::Address.city %>
+    state: <%= Faker::Address.state %>
+    country: <%= Faker::Address.country %>
+    post_code: <%= Faker::Address.postcode %>
+
+
+
 
 #    email: Faker::Internet.email
 two:
-    id: 2
     email: <%= Faker::Internet.email %>
     encrypted_password: <%= User.new.send(:password_digest, 'Passw0rd') %>
     first_name: <%=Faker::Name.first_name  %>
     last_name: <%= Faker::Name.last_name %>
+    street_no: 1
+    street: <%= Faker::Address.street_name %>
+    city: <%= Faker::Address.city %>
+    state: <%= Faker::Address.state %>
+    country: <%= Faker::Address.country %>
+    post_code: <%= Faker::Address.postcode %>
+
