--- a/test/fixtures/works.yml
+++ b/test/fixtures/works.yml
@@ -1,28 +1,25 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  id: 1
   hour: 1
-  description:
-  project_id: 1
-  time_sheet_id: 1
+  description: 'this is a description'
+  project: one
+  time_sheet: one
 
 two:
-  id: 2
   hour: 1
-  description:
-  project_id: 1
-  time_sheet_id: 2
+  description: 'this is a description'
+  project: one
+  time_sheet: two
 
 three:
-  id: 3
   hour: 1
-  description:
-  project_id: 2
-  time_sheet_id: 2
+  description: 'this is a description'
+  project: two
+  time_sheet: two
 four:
-  id: 4
+
   hour: 1
-  description:
-  project_id: 2
-  time_sheet_id: 1
+  description: 'this is a description'
+  project: two
+  time_sheet: one
