user search form

--- a/test/fixtures/works.yml
+++ b/test/fixtures/works.yml
@@ -4,26 +4,28 @@ one:
   hour: 1
   description: 'this is a description'
   project: one
-  time_sheet: one
+  time_sheet_id: one
 
 two:
   hour: 1
   description: 'this is a description'
   project: one
-  time_sheet: two
+  time_sheet_id: two
 
 three:
   hour: 1
   description: 'this is a description'
   project: two
-  time_sheet: two
+  time_sheet_id: two
 four:
 
   hour: 1
   description: 'this is a description'
   project: two
+  time_sheet_id: one
 five:
 
   hour: 1
   description: 'this is a description'
   project: two
+  time_sheet_id: one
