--- a/config/database.yml
+++ b/config/database.yml
@@ -17,8 +17,13 @@ default: &default
 ## re-generated from your development database when you run "rake".
 ## Do not set this db to the same as development or production.
 test:
-  <<: *default
-  database: db/test.sqlite3
+  adapter: postgresql
+  encoding: unicode
+  database: loggintrackerTEST
+  pool: 5
+  username: postgres
+  password: monster
+  host: localhost
 #
 #production:
 #  <<: *default
